[gd_scene load_steps=5 format=3 uid="uid://0qfpvccb5706"]

[ext_resource type="Script" path="res://scenes/Global.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://nbvs5vklklkd" path="res://actors/party/PartyMember.tscn" id="3_emquo"]

[sub_resource type="Animation" id="Animation_f07xo"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n06xd"]
_data = {
"SceneFade": SubResource("Animation_f07xo")
}

[node name="Global" type="Node"]
process_mode = 1
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SceneFade"
libraries = {
"": SubResource("AnimationLibrary_n06xd")
}

[node name="PartyTrain" type="Node" parent="."]
editor_description = "The PartyTrain contains every party member. PartyMember1 is the leader, which is normally hidden and only shown during combat."

[node name="PartyMember1" parent="PartyTrain" instance=ExtResource("3_emquo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -251, -162, 0)
partyLeader = true

[node name="PartyMember2" parent="PartyTrain" node_paths=PackedStringArray("target") instance=ExtResource("3_emquo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -240, -157, 0)
collision_mask = 11
target = NodePath("../PartyMember1")

[node name="PartyMember3" parent="PartyTrain" node_paths=PackedStringArray("target") instance=ExtResource("3_emquo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -238, -155, 0)
collision_mask = 11
target = NodePath("../PartyMember2")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
